Add preloader and sound on result.

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "requirejs-text": "",
     "modernizr": "",
     "marionette": "",
-    "swiper": ""
+    "swiper": "",
+    "SoundJS": "*"
   },
   "devDependencies": {}
 }
