--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "modernizr": "",
     "marionette": "",
     "swiper": "",
-    "SoundJS": "*"
+    "SoundJS": "*",
+    "shake.js": ""
   },
   "devDependencies": {}
 }
